--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
+    "react-redux": "^8.1.3",
+    "redux": "^4.2.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.2",
     "tachyons": "^4.12.0"
   },
   "devDependencies": {
