--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "react-error-boundary": "^4.0.11",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
-    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.2",
     "tachyons": "^4.12.0"
   },
@@ -30,6 +29,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "gh-pages": "^6.0.0",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vite-plugin-pwa": "^0.17.2"
   }
 }
