--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "robotfriends-jtos",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://hx-aquintero.github.io/robofriends/",
   "type": "module",
   "scripts": {
     "dev": "vite",
